# crysteriser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
src/: CMakeLists.txt  common.h  main.c  matrix.h  rasteriser.h  vertexdata.h
tests/: CMakeLists.txt  main_test.c  matrix_test.h  test_main.c
